--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ cc = "1.0.90"
 
 [dependencies]
 cc = "1.0.90"
-nix = "0.28.0"
+nix = { version = "0.28.0", features = ["aio", "signal"] }
 num_cpus = "1.16.0"
 paste = "1.0.14"
 x86_64 = "0.15.0"
@@ -27,3 +27,5 @@ asm = "0.3.0"
 iocuddle = "0.1.1"
 scan_fmt = "0.2.6"
 memoffset = "0.9.0"
+lazy_static = "1.4.0"
+map = "0.0.0"
