--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ scan_fmt = "0.2.6"
 memoffset = "0.9.0"
 lazy_static = "1.4.0"
 map = "0.0.0"
+serde_with = "3.6.1"
+serde_as = "0.0.1"
+serde_json = "1.0.114"
